--- a/Linux/README
+++ b/Linux/README
@@ -1,9 +1,10 @@
 Dependências
 
 PELO APT
+    python3
+    python3-pip
     default-jdk
     openjdk-8-jdk
-    python3-hunspell
     libhunspell-dev
     unoconv
     xserver-xephyr
@@ -12,11 +13,13 @@ PELO PIP3
     pyqt5
     pyqtwebengine
     pyahocorasick
+    hunspell
     natsort 
     Cython
     vlibras-translate 
     pdfminer.six
     Pillow
     unidecode
+    
 
 java 1.8
